tests/error/types-4.moc
void main() {
    int x = (void) 4;
}
